2011-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Diagnose and aggressively retry failed download connections.

	* src/debug.h (DEBUG_TRACE_INTERNET_REQUESTS): New macro; define it.

	* src/pkginet.cpp (debug.h): #include it.
	(pkgDownloadMeter): New abstract class; declare it and implement its
	default (non-abstract) data and methods; derive...
	(pkgDownloadMeterTTY): ...this new class from it; implement it...
	(pkgInternetStreamingAgent::Get): ...and instantiate it (naively for
	now), as associated pkgDownloadMeter object; add tracing diagnostic.
	(pkgInternetAgent::OpenURL): Don't inline it; move implementation out
	of line; add retry loops to aggressively retry failed connections.
	(pkgInternetAgent::QueryContentLength): New method; implement it.
	(pkgInternetStreamingAgent::TransferData): Avoid Microsoft specific
	data type `DWORD'; prefer equivalent standard `unsigned long'.  Add
	tracing diagnostic.  Remove progress diagnostic; replace it with an
	`Update' request to associated pkgDownloadMeter.
	(pkgInternetLzmaStreamingAgent::GetRawData): Avoid `DWORD' data type.
	(pkgInternetLzmaStreamingAgent::TransferData): Likewise; add tracing
	diagnostic on failure.

2011-03-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.2-mingw32-alpha-3 released.

	* configure.ac (AC_INIT): Adjust version number.
	* srcdist-doc/NEWS.in: Updated; add bug-fix description.
	* All files (r0-2-alpha-3): Tag assigned.

2011-03-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Provisional handling for http proxy authentication.
	(Adapted from patch by Scott Michel <pingbak@users.sourceforge.net>)
	(ref: MinGW-Patch #3158453)

	* src/pkginet.cpp: Several format/layout adjustments; add comments.
	Eliminate several instances of Microsoft specific typedef nastiness.
	(dmh_dialogue_context): New macro; kludge definition to support...
	(pkgInternetAgent::OpenURL) [HTTP_STATUS_PROXY_AUTH_REQ]: Detect
	and handle it.
